typescript/checker/tests/conformance/es6/for-ofStatements/for-of18.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            205,
        ),
        hi: BytePos(
            206,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/for-ofStatements/for-of18.ts:14:5
   |
14 | var v: string;
   |     ^

